Fix dashboard on small resolutions.

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -2054,6 +2054,6 @@ button {
   font-size: 20px;
  }
 
-.fs15 {
-    font-size: 15px;
+.fs18 {
+    font-size: 18px;
 }
